src/_includes/programs/program-detail.css
/* -- .ProgramDetail -- */
.ProgramDetail {
  display: flex;
  flex-direction: column;
}

/* -- .ProgramDetail-description -- */
.ProgramDetail-description {
  max-width: 600px;
  margin-bottom: 35px;
  display: flex;
  align-self: center;
}

@media (min-width: $desktop) {
  .ProgramDetail-description {
    margin-bottom: $spacing5;
  }
}

/* -- .ProgramDetail-events -- */
.ProgramDetail-events {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: $spacing4;
}

/* -- .ProgramEvent -- */
.ProgramEvent {
  display: inline-flex;
  flex-direction: column;
  transform: rotate(calc(1deg * (var(--rand) * 2 - 1)));
}

.ProgramEvent-title {
  font-size: $fontSize1;
  text-decoration: underline;
}

.ProgramEvent-date {
  color: $black;
}

.ProgramEvent-poster {
  width: 285px;
  height: 285px;
  margin-top: $spacing1;
  object-fit: cover;
  border-radius: $borderRadius0;
}

.ProgramEvent--bordered .ProgramEvent-poster {
  border: 1px solid var(--color1);
}

